--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-lint",
-    "test-lint": "npx eslint --ext .js ."
+    "test": "npm run test-lint && npm run test-unit",
+    "test-lint": "npx eslint --ext .js .",
+    "test-unit": "npx mocha test/ --require test/_mocha_clifix.js"
   },
   "author": "",
   "license": "MIT",
@@ -15,7 +16,8 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.11.0",
-    "eslint-plugin-node": "^8.0.1"
+    "eslint-plugin-node": "^8.0.1",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "qs": "^6.6.0"
